# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: builder.py  diff.py  generate_diff.py  node_types.py  parse.py  parsers.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/formatters/: __init__.py  json.py  nested.py  plain.py  render_diff.py  renderer.py
gendiff/scripts/: gendiff.py  run.py
tests/: generate_diff_test.py  test_generate_diff.py
tests/fixtures/: diff_4
