[tool.poetry]
name = "uladzislau97_gendiff"
version = "0.1.1"
description = "Compares two configuration files and shows a difference."
authors = ["Uladzislau Vasilyeu <VSvasilyev97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Uladzislau97/python-project-lvl2"
repository = "https://github.com/Uladzislau97/python-project-lvl2"
documentation = "https://github.com/Uladzislau97/python-project-lvl2"

packages = [
  { include = "gendiff" },
]

keywords = [
    "gendiff",
    "diff"
]

classifiers = [
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
