[tool.poetry]
name = "uladzislau97_gendiff"
version = "1.4.1"
description = "Compares two configuration files and shows a difference."
authors = ["Uladzislau Vasilyeu <VSvasilyev97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Uladzislau97/python-project-lvl2"
repository = "https://github.com/Uladzislau97/python-project-lvl2"
documentation = "https://github.com/Uladzislau97/python-project-lvl2"

packages = [
  { include = "gendiff" },
]

keywords = [
    "gendiff",
    "diff"
]

classifiers = [
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3.4"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
